[project]
name = "entpy"
requires-python = ">=3.12"
version = "0.0.1"
description = "EntPy is a data access and privacy framework that augments SQLAlchemy, providing you a central place to safely access and manage your data."
authors = [{name = "Vincent Durmont", email = "vdurmont@gmail.com"}]
dependencies = [
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "sentinels>=1.1.1",
    "sqlalchemy==2.0.43",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.8",
    "mypy>=1.18.2",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
explicit_package_bases = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framework", "gencode"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]
